--- a/src/browser/base/content/zen-styles/zen-panel-ui.css
+++ b/src/browser/base/content/zen-styles/zen-panel-ui.css
@@ -3,14 +3,17 @@
  * License, v. 2.0. If a copy of the MPL was not distributed with this
  * file, You can obtain one at http://mozilla.org/MPL/2.0/.
  */
-panel[type='arrow'][animate][animate='open']::part(content) {
-  animation: zen-jello-animation 0.35s ease;
-
+panel[type='arrow'][animate='open'] {
   @media (-moz-platform: macos) {
-    animation: zen-jello-animation-alt 0.2s ease-out;
+    animation: zen-jello-animation-macos 0.4s ease-out;
+  }
+  @media not(-moz-platform: macos) {
+    &::part(content) {
+      animation: zen-jello-animation 0.35s ease;
+    }
   }
 }
 
-panel[type='arrow'][animate]:not([animate='open'])::part(content) {
+panel[type='arrow'][animate]:not([animate='open']) {
   animation: zen-jello-out-animation 0.3s ease-in-out;
 }
